--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     </div>
     <ul class="navbar-nav nav nav-pills">
         <li role="presentation"><a href="#!/view1">Image Tagging</a></li>
-        <li role="presentation"><a href="#!/view2">view2</a></li>
+        <li role="presentation"><a href="#!/view2">Video Upload</a></li>
     </ul>
 </div>
 
@@ -52,6 +52,7 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-file-upload/dist/angular-file-upload.js"></script>
 <script src="bower_components/imgareaselect/jquery.imgareaselect.dev.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
