--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="bower_components/imgareaselect/distfiles/css/imgareaselect-animated.css">
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery.ui.all.css">
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -50,11 +51,14 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-file-upload/dist/angular-file-upload.js"></script>
+<script src="bower_components/angular-ui-slider/src/slider.js"></script>
 <script src="bower_components/imgareaselect/jquery.imgareaselect.dev.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="app.js"></script>
 <script src="view1/view1.js"></script>
 <script src="view2/view2.js"></script>
@@ -64,5 +68,6 @@
 <script src="components/img-area-select/gg-directives.module.js"></script>
 <script src="components/img-area-select/img-area-select.directive.js"></script>
 <script src="components/img-area-select/image.service.js"></script>
+<script src="components/video/video.service.js"></script>
 </body>
 </html>
