ffprobe stuff and other goodies

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="bower_components/imgareaselect/distfiles/css/imgareaselect-animated.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery.ui.all.css">
+    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -59,6 +60,7 @@
 <script src="bower_components/imgareaselect/jquery.imgareaselect.dev.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script src="app.js"></script>
 <script src="view1/view1.js"></script>
 <script src="view2/view2.js"></script>
