--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -28,7 +28,8 @@
                 <label class="control-label">
                     Frame
                 </label>
-                <div ui-slider min="0" max="10000" ng-model="vm.frameNumber"></div>
+                <div ui-slider min="0" max="{{vm.selectedVideo.framesSaved}}" ng-model="vm.frameNumber"
+                     ng-change="vm.fetchFrame()"></div>
             </div>
             <div class="form-group">
                 <div class="input-group">
@@ -36,7 +37,7 @@
                     <input type="number" ng-model="vm.frameNumber" class="form-control">
                     <div class="input-group-btn">
 
-                        <button class="btn btn-default">Fetch Frame</button>
+                        <button class="btn btn-default" ng-click="vm.fetchFrame()">Fetch Frame</button>
                     </div>
                 </div>
 
@@ -61,6 +62,10 @@
                     <dd>{{vm.selectedVideo.metadata.streams[0].duration}}</dd>
                     <dt>Number of frames</dt>
                     <dd>{{vm.selectedVideo.metadata.streams[0].nb_frames}}</dd>
+                    <dt>Status</dt>
+                    <dd>{{vm.selectedVideo.estado}}</dd>
+                    <dt>Frames generados</dt>
+                    <dd>{{vm.selectedVideo.framesSaved}}</dd>
                 </dl>
             </div>
         </div>
