--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -7,24 +7,14 @@
         <div ng-show="vm.uploader.isHTML5">
             <!-- 3. nv-file-over uploader="link" over-class="className" -->
             <div class="well my-drop-zone" nv-file-over="" uploader="vm.uploader">
-                Base drop zone
+                drop your shitty files here.
             </div>
 
             <!-- Example: nv-file-drop="" uploader="{Object}" options="{Object}" filters="{String}" -->
-            <div nv-file-drop="" uploader="vm.uploader" options="{ url: '/foo' }">
-                <div nv-file-over="" uploader="vm.uploader" over-class="another-file-over-class"
-                     class="well my-drop-zone">
-                    Another drop zone with its own settings
-                </div>
-            </div>
         </div>
-
         <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
         Multiple
         <input type="file" nv-file-select="" uploader="vm.uploader" multiple=""><br>
-
-        Single
-        <input type="file" nv-file-select="" uploader="vm.uploader">
     </div>
 
     <div class="col-md-9" style="margin-bottom: 40px">
